--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.1",
   "description": "Advance logger for Node-Red",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jayathuam/node-red-contrib-advance-logger"
-  },
+  },  
   "keywords": [
     "file logger",
     "winston",
@@ -25,6 +26,7 @@
     "winston": "2.2.0"
   },
   "devDependencies": {
-    "jshint": "^2.9.4"
+    "jshint": "^2.9.4",
+    "standard-version": "^4.0.0"
   }
 }
