--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-red-contrib-advance-logger",
   "version": "1.0.1",
   "description": "Advance logger for Node-Red",
+  "main": "advance-logger.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "standard-version"
